[package]
name = "server_v2"
version = "0.1.0"
authors = ["Abhishek Shah <abhishekshah3@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[workspace]
members = [
    "tcp_client",
    "tcp_server",
    "http_server",
    "http",
]

[dependencies]
